config: 新增 Firebase Hosting 站點 ID。

--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,7 @@
         "indexes": "firestore.indexes.json"
     },
     "hosting": {
+        "site": "sub-buddy-2025",
         "public": "dist",
         "ignore": [
             "firebase.json",
