feat: 實作核心功能包含使用者認證、群組管理、聊天室與評價系統，並引入 i18n 國際化。

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp_vue",
+  "name": "subscription-buddy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "firebase": "^12.6.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
+    "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
