feat: 實作核心應用程式架構、使用者認證、群組管理與聊天功能，並導入開發工具與 CI/CD 流程

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,6 +5,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+# Security
+# .env (Allowed for private repo per user request)
+.env.local
+.env.*.local
+! .env.example
+
+# Test Reports
+playwright-report/
+test-results/
 
 node_modules
 dist
