--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy:rules": "firebase deploy --only firestore:rules"
+    "deploy:rules": "firebase deploy --only firestore:rules",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write .",
+    "test": "vitest"
   },
   "dependencies": {
     "firebase": "^12.6.0",
@@ -17,12 +20,20 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
+    "@playwright/test": "^1.57.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "autoprefixer": "^10.4.22",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.22.0",
     "firebase-tools": "^14.27.0",
+    "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4"
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.17",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.16"
   }
 }
