fix(lint): 修復 ESLint 設定以支援 TypeScript 和 Service Worker
- 新增 .eslintignore 忽略 Vue 中間檔案
- 更新 .eslintrc.cjs 支援 TypeScript 解析
- 為 firebase-messaging-sw.js 設定 Service Worker 全域變數
- 安裝 @typescript-eslint/parser 和 @typescript-eslint/eslint-plugin

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.7",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.23",
