feat(core): 完成全方位優化 (Types, UX, SEO, DevOps)
Core:
- refactor(store): 強化 ChatStore 型別與錯誤處理
- refactor(profile): 抽離歷史拼團邏輯至 UserStore
- feat(error): 實作全域錯誤處理 (Global Error Handler)

Features:
- feat(admin): 儀表板串接真實 Firestore 數據
- feat(pwa): 新增版本更新提示 (ReloadPrompt)
- style(theme): 設定 Tailwind 專案色票 (brand-dark)

DevOps & SEO:
- ci(github): 整合 Playwright E2E 測試
- feat(seo): 實作動態 Meta Tags (@unhead/vue)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@unhead/vue": "^2.1.2",
     "@vueuse/core": "^14.1.0",
     "caniuse-lite": "^1.0.30001764",
     "firebase": "^12.6.0",
