feat(polish): 完成專案最終打磨 (Phase 4)
- a11y: BaseInput 實作自動 ID 生成 (useId)
- security: 配置 Firebase Security Headers (HSTS)
- chore: 設定 Husky 與 Lint Staged
- ci: 修正 UserStore Runtime Import 錯誤
- build: 驗證 Vite Build 通過

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "esModuleInterop": true,
         "lib": [
             "ESNext",
-            "DOM"
+            "DOM",
+            "WebWorker"
         ],
         "skipLibCheck": true,
         "baseUrl": ".",
@@ -20,7 +21,10 @@
             "@/*": [
                 "src/*"
             ]
-        }
+        },
+        "types": [
+            "vite-plugin-pwa/client"
+        ]
     },
     "include": [
         "src/**/*.ts",
