--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy:rules": "firebase deploy --only firestore:rules",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky"
   },
   "dependencies": {
     "@unhead/vue": "^2.1.2",
@@ -35,7 +36,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.22.0",
     "firebase-tools": "^14.27.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.3.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
@@ -44,5 +47,11 @@
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.16",
     "vue-tsc": "^3.2.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
