--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:emulator": "cross-env VITE_USE_EMULATOR=true vite",
+    "emulators": "firebase emulators:start",
+    "emulators:import": "firebase emulators:start --import=./emulator-data --export-on-exit",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "deploy:rules": "firebase deploy --only firestore:rules",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix --ignore-path .gitignore",
     "format": "prettier --write .",
     "test": "vitest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@unhead/vue": "^2.1.2",
@@ -21,28 +26,41 @@
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-i18n": "^11.2.2",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^5.0.0",
     "@playwright/test": "^1.57.0",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-onboarding": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/vue3-vite": "^10.1.11",
     "@types/node": "^25.0.7",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.23",
+    "cross-env": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^10.1.11",
     "eslint-plugin-vue": "^9.22.0",
     "firebase-tools": "^14.27.0",
     "husky": "^9.1.7",
     "jsdom": "^27.3.0",
     "lint-staged": "^16.2.7",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^6.0.5",
+    "storybook": "^10.1.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
     "unplugin-vue-components": "^31.0.0",
