--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
         "src/**/*.vue"
     ],
     "exclude": [
-        "src/**/*.spec.ts"
+        "src/**/*.spec.ts",
+        "src/**/*.stories.ts"
     ],
     "references": [
         {
