refactor(chat): 拆分 ChatRoomView 元件以提升可維護性
- extract: 建立 src/components/chat/ChatMessageList.vue

- extract: 建立 src/components/chat/ChatInputArea.vue

- extract: 建立 src/components/chat/ChatRatingModal.vue

- refactor: ChatRoomView.vue 引入子元件

- docs: 更新 README.md 與 walkthrough.md

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test": "vitest",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "lhci:collect": "lhci collect",
+    "lhci:assert": "lhci assert",
+    "lhci:full": "npm run build && lhci collect && lhci assert"
   },
   "dependencies": {
     "@unhead/vue": "^2.1.2",
@@ -31,6 +34,9 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^5.0.0",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.57.0",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
