--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vueuse/core": "^14.1.0",
     "caniuse-lite": "^1.0.30001764",
     "firebase": "^12.6.0",
+    "fuse.js": "^7.1.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-i18n": "^11.2.2",
