--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^12.6.0",
     "fuse.js": "^7.1.0",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.24",
     "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.3",
