build(docker): 實作多階段建構與 Nginx SPA 配置
- build: 優化 Dockerfile 採 Multi-stage Build

- feat: 新增 nginx.default.conf 支援 SPA 路由

- chore: 新增 .dockerignore 排除不必要檔案

- docs: 更新 README.md 與 walkthrough.md

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,16 @@
 node_modules
 dist
 .git
-.vscode
-.firebase
+.gitignore
 .env
+.env.*
+README.md
+walkthrough.md
+task.md
+implementation_plan.md
+emulator-data
+tests
+playwright-report
+test-results
+images
+.gemini
