--- a/firebase.json
+++ b/firebase.json
@@ -28,6 +28,10 @@
             "value": "DENY"
           },
           {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://apis.google.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://lh3.googleusercontent.com https://*.google.com https://upload.wikimedia.org https://wsrv.nl https://via.placeholder.com https://www.gstatic.com; connect-src 'self' https://identitytoolkit.googleapis.com https://firestore.googleapis.com https://securetoken.googleapis.com ws://localhost:* http://localhost:*; object-src 'none'; frame-src 'self' https://*.firebaseapp.com"
+          },
+          {
             "key": "X-XSS-Protection",
             "value": "1; mode=block"
           }
