--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@commitlint/config-conventional": "^20.3.1",
     "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.57.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-onboarding": "^10.1.11",
@@ -68,6 +70,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^6.0.5",
+    "semantic-release": "^25.0.2",
     "storybook": "^10.1.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
