--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     },
     "main": "lib/index.js",
     "dependencies": {
+        "@google-cloud/firestore": "^8.2.0",
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^4.6.0"
     },
