--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID=subscription-buddy-2353b
 VITE_FIREBASE_STORAGE_BUCKET=subscription-buddy-2353b.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=699854859216
 VITE_FIREBASE_APP_ID=1:699854859216:web:82b8b51da0731ac72d27d5
+VITE_RECAPTCHA_SITE_KEY=6LdFF04sAAAAAD0jsxKSYU6quy0siClgVb3ULpIL
