--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "main": "lib/index.js",
     "dependencies": {
         "firebase-admin": "^12.0.0",
-        "firebase-functions": "^4.6.0"
+        "firebase-functions": "^4.6.0",
+        "zod": "^4.3.5"
     },
     "devDependencies": {
         "typescript": "^5.0.0"
