--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
         "paths": {
             "@/*": [
                 "src/*"
+            ],
+            "@shared/*": [
+                "functions/src/shared/*"
             ]
         },
         "types": [
