--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
     },
     "main": "lib/index.js",
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^5.2.1",
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^4.6.0",
         "zod": "^4.3.5"
