--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
         "shell": "npm run build && firebase functions:shell",
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
-        "logs": "firebase functions:log"
+        "logs": "firebase functions:log",
+        "generate:sbom": "cyclonedx-npm --output-format JSON --output-file sbom.json"
     },
     "engines": {
         "node": "18"
@@ -21,6 +22,7 @@
         "zod": "^4.3.5"
     },
     "devDependencies": {
+        "@cyclonedx/cyclonedx-npm": "^4.1.2",
         "typescript": "^5.0.0"
     },
     "private": true
