fix(lint): 修復編譯錯誤與 IDE linting 問題
- 修復 functions/src/utils/locker.ts 模板字串語法錯誤
- 修復 functions/src/api/idempotency.ts 交易回傳值類型
- 修復 functions/src/api/validation.ts ZodError.issues 屬性存取
- 修復 src/composables/useFormValidation.ts ZodError 屬性
- 修復 functions/src/utils/mappers.ts any 類型改為 DocumentData
- 修復 src/firebase/config.ts @ts-ignore 改為 @ts-expect-error
- 更新 .eslintignore 排除建置產物目錄
- 新增 .vscode/settings.json 配置 IDE linting 排除規則
- 刪除 storybook-static 建置產物目錄
- 更新 docs/THREAT_MODEL.md Markdown 格式

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,9 +5,14 @@
 # Build outputs
 dist
 dist-ssr
+functions/lib
+storybook-static
 
 # Dependencies
 node_modules
 
 # TypeScript cache
 *.tsbuildinfo
+
+# Generated files
+stats.html
