--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - branch-v2
+      - main
 
 permissions:
   contents: write # required for creating releases and tags
@@ -21,14 +21,18 @@ jobs:
           fetch-depth: 0 # fetch all history for proper commit analysis
           persist-credentials: false # semantic-release will reuse the GITHUB_TOKEN
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Release
         env:
