--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,10 +1,10 @@
 name: SonarCloud
 
 on:
-  push:
-    branches:
-      - main
-      - branch-v2
+#   push:
+#     branches:
+#       - main
+#       - branch-v2
   pull_request:
     types: [opened, synchronize, reopened]
 
