fix(web): configure aliases for core package
- Add @subscription-buddy/core alias to Vite and TSConfig
- Update useNotification mock with POSITION

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -22,8 +22,8 @@
             "@/*": [
                 "src/*"
             ],
-            "@shared/*": [
-                "functions/src/shared/*"
+            "@subscription-buddy/core": [
+                "../../packages/core/src"
             ]
         },
         "types": [
