--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,9 @@
         "firebase": "^10.0.0 || ^11.0.0",
         "vue": "^3.0.0"
     },
+    "dependencies": {
+        "zod": "^3.24.1"
+    },
     "devDependencies": {
         "tsup": "^8.0.0",
         "typescript": "^5.0.0"
