--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.3",
     "vue-toastification": "^2.0.0-rc.5",
+    "workbox-window": "^7.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
