--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -19,6 +19,7 @@
         "express": "^5.2.1",
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^4.6.0",
+        "helmet": "^8.0.0",
         "zod": "^4.3.5"
     },
     "devDependencies": {
