--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,11 @@ sonar.projectName=Subscription Buddy
 
 sonar.sources=apps/web/src,apps/functions/src,packages/core/src
 sonar.tests=apps/web/tests
-sonar.exclusions=**/node_modules/**,**/dist/**,**/*.spec.ts,**/*.test.ts,**/*.d.ts
+# Exclude compiled files, node_modules, and coverage
+sonar.exclusions=**/node_modules/**,**/dist/**,**/lib/**,**/coverage/**,**/*.d.ts,**/public/**,**/*.spec.ts
+
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
 sonar.sourceEncoding=UTF-8
 
 # Complexity Limits
