fix(sonar): force remove lib and update exclusions
- Explicitly exclude apps/functions/lib/** in sonar-project.properties
- Hard remove apps/functions/lib from git

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=Subscription Buddy
 sonar.sources=apps/web/src,apps/functions/src,packages/core/src
 sonar.tests=apps/web/tests
 # Exclude compiled files, node_modules, and coverage
-sonar.exclusions=**/node_modules/**,**/dist/**,**/lib/**,**/coverage/**,**/*.d.ts,**/public/**,**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/dist/**,**/lib/**,apps/functions/lib/**,**/coverage/**,**/*.d.ts,**/public/**,**/*.spec.ts
 
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
