feat(web): implement feature flags service
- Add configService.ts for Firebase Remote Config
- Add Contract Testing specs (api.spec.ts, verify.spec.ts)
- Update roadmap implementation status

--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -8,6 +8,7 @@
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
         "logs": "firebase functions:log",
+        "test": "vitest",
         "generate:sbom": "cyclonedx-npm --output-format JSON --output-file sbom.json"
     },
     "engines": {
