--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -27,7 +27,8 @@
         "@cyclonedx/cyclonedx-npm": "^4.1.2",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.0",
-        "typescript": "^5.0.0"
+        "typescript": "^5.0.0",
+        "vitest": "^1.6.0"
     },
     "private": true
 }
