--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -28,7 +28,8 @@
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.0",
         "typescript": "^5.0.0",
-        "vitest": "^1.6.0"
+        "vitest": "^1.6.0",
+        "@pact-foundation/pact": "^13.0.0"
     },
     "private": true
 }
