--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,7 +46,9 @@
     "@commitlint/config-conventional": "^20.3.1",
     "@cyclonedx/cyclonedx-npm": "^4.1.2",
     "@lhci/cli": "^0.15.1",
+    "@pact-foundation/pact": "^13.0.0",
     "@playwright/test": "^1.57.0",
+    "axios": "^1.6.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-a11y": "^10.1.11",
