feat(functions): implement automated api docs (tsoa)
- Configure tsoa and swagger-ui-express
- Add HealthController as proof of concept
- Setup build scripts to generate swagger.json and routes.ts
- Commit dummy files to satisfy initial build

--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@subscription-buddy/functions",
     "scripts": {
-        "build": "tsc",
+        "build": "pnpm run build:tsoa && tsc",
         "build:watch": "tsc --watch",
+        "build:tsoa": "tsoa spec-and-routes",
         "serve": "npm run build && firebase emulators:start --only functions",
         "shell": "npm run build && firebase functions:shell",
         "start": "npm run shell",
