--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -7,7 +7,9 @@
         "sourceMap": true,
         "strict": true,
         "skipLibCheck": true,
-        "target": "es2017"
+        "target": "es2017",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "compileOnSave": true,
     "include": [
