--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -22,7 +22,10 @@
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^4.6.0",
         "helmet": "^8.0.0",
-        "zod": "^4.3.5"
+        "zod": "^4.3.5",
+        "swagger-ui-express": "^5.0.0",
+        "@google-cloud/pubsub": "^4.3.3",
+        "tsoa": "^6.0.0"
     },
     "devDependencies": {
         "@cyclonedx/cyclonedx-npm": "^4.1.2",
@@ -30,7 +33,8 @@
         "@types/express": "^5.0.0",
         "typescript": "^5.0.0",
         "vitest": "^1.6.0",
-        "@pact-foundation/pact": "^13.0.0"
+        "@pact-foundation/pact": "^13.0.0",
+        "@types/swagger-ui-express": "^4.1.6"
     },
     "private": true
 }
