--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -25,7 +25,8 @@
         "zod": "^4.3.5",
         "swagger-ui-express": "^5.0.0",
         "@google-cloud/pubsub": "^4.3.3",
-        "tsoa": "^6.0.0"
+        "tsoa": "^6.0.0",
+        "@tsoa/runtime": "^6.0.0"
     },
     "devDependencies": {
         "@cyclonedx/cyclonedx-npm": "^4.1.2",
