--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -7,9 +7,10 @@
         "sourceMap": true,
         "strict": true,
         "skipLibCheck": true,
-        "target": "es2017",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "compileOnSave": true,
     "include": [
