feat(ops): implement security and operations features
- Add License Scanning script
- Configure Cloud Budget in Terraform
- Add AI Content Moderation trigger
- Implement Graceful Shutdown handler
- Add Firestore Backup script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
     "format": "pnpm -r format",
-    "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
+    "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
+    "scan:licenses": "license-checker --production --json --out licenses.json --failOn \"GPL;AGPL;LGPL\""
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
