feat(arch): implement devex and architecture improvements
- Add ADRs 0001, 0002
- Configured Dependency Cruiser
- Enable Cognitive Complexity rule in ESLint
- Initialize UI Kit package

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "pnpm -r lint",
     "format": "pnpm -r format",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
-    "scan:licenses": "license-checker --production --json --out licenses.json --failOn \"GPL;AGPL;LGPL\""
+    "scan:licenses": "license-checker --production --json --out licenses.json --failOn \"GPL;AGPL;LGPL\"",
+    "depcruise": "depcruise src --config .dependency-cruiser.js"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
