--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -70,6 +70,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-storybook": "^10.1.11",
     "eslint-plugin-vue": "^9.22.0",
     "firebase-tools": "^14.27.0",
