--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -24,6 +24,7 @@
     "vite": "^5.0.0",
     "vue": "^3.4.0",
     "typescript": "^5.0.0",
-    "vue-tsc": "^2.0.0"
+    "vue-tsc": "^2.0.0",
+    "vitest": "^1.6.0"
   }
 }
