--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -18,13 +18,14 @@
     "test": "vitest"
   },
   "peerDependencies": {
-    "vue": "^3.0.0"
+    "vue": "^3.5.24"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "vue": "^3.4.0",
-    "typescript": "^5.0.0",
-    "vue-tsc": "^2.0.0",
-    "vitest": "^1.6.0"
+    "vite": "^7.2.4",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vue": "^3.5.24",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.2",
+    "vitest": "^4.0.16"
   }
 }
