--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "vue-router": "^4.6.3",
     "vue-toastification": "^2.0.0-rc.5",
     "workbox-window": "^7.3.0",
+    "workbox-window": "^7.3.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
