--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -7,9 +7,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "scripts": {
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "vite": "^7.2.4",
+    "vite-plugin-dts": "^4.5.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "vue": "^3.5.24",
     "typescript": "^5.9.3",
