ci: 新增 CI Workflow 於 V2 分支自動執行測試

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [**]
+    branches: ['main', 'V2']
   pull_request:
-    branches: [**]
+    branches: ['main', 'V2']
 
 jobs:
   build:
