ci: 整合 GitHub Secrets 並強化環境變數安全性
1. 修改 .github/workflows/ci.yml：注入 VITE_ 環境變數

2. 修改 .gitignore 與 apps/web/.gitignore：忽略 .env 檔案

3. 更新 apps/web/README.md：新增基礎設施更新紀錄

--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -7,7 +7,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Security
-# .env (Allowed for private repo per user request)
+.env
 .env.local
 .env.*.local
 ! .env.example
