--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Security
-# .env (Allowed for private repo per user request)
+.env
 .env.local
 .env.*.local
 ! .env.example
@@ -43,7 +43,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Security
-# .env (Allowed for private repo per user request)
+.env
 .env.local
 .env.*.local
 ! .env.example
