feat(observability): integrate sentry vue sdk for error tracking and rum

--- a/apps/web/.env
+++ b/apps/web/.env
@@ -5,3 +5,5 @@ VITE_FIREBASE_STORAGE_BUCKET=subscription-buddy-2353b.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=699854859216
 VITE_FIREBASE_APP_ID=1:699854859216:web:82b8b51da0731ac72d27d5
 VITE_RECAPTCHA_SITE_KEY=6LdFF04sAAAAAD0jsxKSYU6quy0siClgVb3ULpIL
+VITE_SENTRY_DSN=https://85a301a56341e6bca0cbce6844145c5f@o4510707713703936.ingest.us.sentry.io/4510788722819072
+VITE_SENTRY_ENABLED=true
