--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -17,26 +17,28 @@
     },
     "main": "lib/index.js",
     "dependencies": {
+        "@google-cloud/pubsub": "^4.3.3",
+        "@google-cloud/vision": "^4.0.0",
+        "@sentry/node": "^10.37.0",
+        "@sentry/profiling-node": "^10.37.0",
+        "@tsoa/runtime": "^6.0.0",
         "cors": "^2.8.5",
         "express": "^5.2.1",
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^4.6.0",
         "helmet": "^8.0.0",
-        "zod": "^3.24.1",
         "swagger-ui-express": "^5.0.0",
-        "@google-cloud/pubsub": "^4.3.3",
-        "@google-cloud/vision": "^4.0.0",
         "tsoa": "^6.0.0",
-        "@tsoa/runtime": "^6.0.0"
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@cyclonedx/cyclonedx-npm": "^4.1.2",
+        "@pact-foundation/pact": "^13.0.0",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.0",
+        "@types/swagger-ui-express": "^4.1.6",
         "typescript": "^5.0.0",
-        "vitest": "^1.6.0",
-        "@pact-foundation/pact": "^13.0.0",
-        "@types/swagger-ui-express": "^4.1.6"
+        "vitest": "^1.6.0"
     },
     "private": true
 }
