--- a/apps/web-nuxt/package.json
+++ b/apps/web-nuxt/package.json
@@ -23,6 +23,7 @@
     "@vueuse/nuxt": "^14.1.0",
     "autoprefixer": "^10.4.23",
     "nuxt-vuefire": "^1.1.0",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "vite": "^7.3.1"
   }
 }
