--- a/apps/web/.lighthouserc.json
+++ b/apps/web/.lighthouserc.json
@@ -2,34 +2,32 @@
     "ci": {
         "collect": {
             "staticDistDir": "./dist",
-            "numberOfRuns": 3
+            "numberOfRuns": 3,
+            "settings": {
+                "preset": "desktop",
+                "throttling": {
+                    "rttMs": 40,
+                    "throughputKbps": 10240,
+                    "cpuSlowdownMultiplier": 1
+                }
+            }
         },
         "assert": {
+            "preset": "lighthouse:recommended",
             "assertions": {
-                "categories:performance": [
-                    "error",
-                    {
-                        "minScore": 0.9
-                    }
-                ],
-                "categories:accessibility": [
-                    "warn",
-                    {
-                        "minScore": 0.9
-                    }
-                ],
-                "categories:best-practices": [
-                    "warn",
-                    {
-                        "minScore": 0.9
-                    }
-                ],
-                "categories:seo": [
-                    "warn",
-                    {
-                        "minScore": 0.9
-                    }
-                ]
+                "categories:performance": ["error", {"minScore": 0.9}],
+                "categories:accessibility": ["error", {"minScore": 0.9}],
+                "categories:best-practices": ["error", {"minScore": 0.9}],
+                "categories:seo": ["error", {"minScore": 0.9}],
+                
+                "first-contentful-paint": ["error", {"maxNumericValue": 1800}],
+                "largest-contentful-paint": ["error", {"maxNumericValue": 2500}],
+                "cumulative-layout-shift": ["error", {"maxNumericValue": 0.1}],
+                "total-blocking-time": ["error", {"maxNumericValue": 200}],
+                
+                "unused-javascript": ["warn", {"maxNumericValue": 100000}],
+                "uses-optimized-images": "error",
+                "modern-image-formats": "error"
             }
         },
         "upload": {
