--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -29,7 +29,10 @@
         "helmet": "^8.0.0",
         "swagger-ui-express": "^5.0.0",
         "tsoa": "^6.0.0",
-        "zod": "^3.24.1"
+        "zod": "^3.24.1",
+        "fs-extra": "^11.2.0",
+        "sharp": "^0.33.2",
+        "@simplewebauthn/server": "^9.0.3"
     },
     "devDependencies": {
         "@cyclonedx/cyclonedx-npm": "^4.1.2",
@@ -38,7 +41,9 @@
         "@types/express": "^5.0.0",
         "@types/swagger-ui-express": "^4.1.6",
         "typescript": "^5.0.0",
-        "vitest": "^1.6.0"
+        "vitest": "^1.6.0",
+        "@types/fs-extra": "^11.0.4",
+        "@types/sharp": "^0.32.0"
     },
     "private": true
 }
